--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btn_save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="delete_message">Do you want to delete this item ?</string>
+    <string name="yes">Yes</string>
 </resources>
