--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="delete">Delete</string>
     <string name="delete_message">Do you want to delete this item ?</string>
     <string name="yes">Yes</string>
+    <string name="update">Update</string>
 </resources>
