--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="delete_message">Do you want to delete this item ?</string>
     <string name="yes">Yes</string>
     <string name="update">Update</string>
+    <string name="empty_field">Title cannot be empty</string>
+    <string name="empty_desc">Description cannot be empty</string>
+    <string name="any_error">any_error</string>
+    <string name="exit">exit</string>
+    <string name="exit_msg">Are you sure to exit</string>
+    <string name="cancel">Cancel</string>
 </resources>
